testdata/mtls-circuit/want-static.yaml
# Generated by esgw. DO NOT EDIT.
# config_version: f4301393ea88
admin:
  address:
    pipe:
      path: /tmp/esgw-admin.sock
node:
  cluster: esgw
  id: esgw
  metadata:
    esgw.config_version: f4301393ea88
static_resources:
  clusters:
    - circuit_breakers:
        thresholds:
          - max_connections: 1
            max_pending_requests: 1
      connect_timeout: 5s
      load_assignment:
        cluster_name: us/app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 18080
      name: us/app
      type: STATIC
  listeners:
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 18444
      filter_chains:
        - filter_chain_match:
            server_names:
              - www.example.com
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http2_protocol_options: {}
                http_filters:
                  - name: envoy.filters.http.rbac
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/mtls
                  virtual_hosts:
                    - domains:
                        - www.example.com
                      name: vh/protected
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                server_name: esgw
                stat_prefix: lis/mtls
                strip_any_host_port: true
                use_remote_address: true
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                  - h2
                  - http/1.1
                tls_certificates:
                  - certificate_chain:
                      filename: testdata/certs/www.crt
                    private_key:
                      filename: testdata/certs/www.key
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                validation_context:
                  trusted_ca:
                    filename: testdata/certs/client-ca.crt
              require_client_certificate: true
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: lis/mtls
