testdata/mtls-circuit/want-xds.json
{
  "clusters": {
    "us/app": {
      "circuit_breakers": {
        "thresholds": [
          {
            "max_connections": 1,
            "max_pending_requests": 1
          }
        ]
      },
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "us/app",
      "type": "EDS"
    }
  },
  "endpoints": {
    "us/app": {
      "cluster_name": "us/app",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 18080
                  }
                }
              }
            }
          ]
        }
      ]
    }
  },
  "listeners": {
    "lis/mtls": {
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 18444
        }
      },
      "filter_chains": [
        {
          "filter_chain_match": {
            "server_names": [
              "www.example.com"
            ]
          },
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http2_protocol_options": {},
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/mtls"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/mtls",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ],
          "transport_socket": {
            "name": "envoy.transport_sockets.tls",
            "typed_config": {
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
              "common_tls_context": {
                "alpn_protocols": [
                  "h2",
                  "http/1.1"
                ],
                "tls_certificate_sds_secret_configs": [
                  {
                    "name": "crt/mtls/0",
                    "sds_config": {
                      "ads": {}
                    }
                  }
                ],
                "tls_params": {
                  "tls_minimum_protocol_version": "TLSv1_2"
                },
                "validation_context_sds_secret_config": {
                  "name": "ca/mtls",
                  "sds_config": {
                    "ads": {}
                  }
                }
              },
              "require_client_certificate": true
            }
          }
        }
      ],
      "listener_filters": [
        {
          "name": "envoy.filters.listener.tls_inspector",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
          }
        }
      ],
      "name": "lis/mtls"
    }
  },
  "routes": {
    "rc/mtls": {
      "name": "rc/mtls",
      "virtual_hosts": [
        {
          "domains": [
            "www.example.com"
          ],
          "name": "vh/protected",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              }
            }
          ]
        }
      ]
    }
  },
  "secrets": {
    "ca/mtls": {
      "name": "ca/mtls",
      "validation_context": {
        "trusted_ca": {
          "filename": "testdata/certs/client-ca.crt"
        }
      }
    },
    "crt/mtls/0": {
      "name": "crt/mtls/0",
      "tls_certificate": {
        "certificate_chain": {
          "filename": "testdata/certs/www.crt"
        },
        "private_key": {
          "filename": "testdata/certs/www.key"
        }
      }
    }
  },
  "version": "f3f9827a22c0"
}
